After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723544 - Fix the previous and the next icons in RTL
Fix the previous and the next icons in RTL
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-03 17:27 UTC by Yosef Or Boczko
Modified: 2014-02-05 19:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EogWindow: Fix the previous and the next icons in RTL (1.20 KB, patch)
2014-02-03 17:27 UTC, Yosef Or Boczko
none Details | Review

Description Yosef Or Boczko 2014-02-03 17:27:05 UTC
See the patch.
Comment 1 Yosef Or Boczko 2014-02-03 17:27:40 UTC
Created attachment 267975 [details] [review]
EogWindow: Fix the previous and the next icons in RTL
Comment 2 Felix Riemann 2014-02-05 19:25:04 UTC
Thanks! What about the "First" and "Last" actions? Do they have to be adjusted as well?

commit 54635a542a89bbb00de3cfee9f5bf325c1f39608
Author: Yosef Or Boczko <>
Date:   Mon Feb 3 19:22:38 2014 +0200

    EogWindow: Fix the previous and the next icons in RTL
    
    https://bugzilla.gnome.org/show_bug.cgi?id=723544
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.