EogWindow: Fix the previous and the next icons in RTL

https://bugzilla.gnome.org/show_bug.cgi?id=723544